--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -249,20 +249,29 @@
 
     <%# Book now card %>
     <div class="col-lg-4 ">
+      <%# <div class="line-break"></div> %>
       <div class="card mb-4 book-now bg-body overflow-hidden w-100 mt-4">
         <div class="card-body">
-          <div class="d-flex justify-content-between text-center">
+          <div class="pink">
+            <h2>Book an appointment</h2>
+          </div>
+          <div class="d-flex justify-content-between">
             <div class="me-2 w-100">
               <%= simple_form_for [@daycare, @consultation] do |f| %>
-              <%= f.input :start_time, as: :datetime, html5: true %>
-              <%= f.input :number_of_children, as: :numeric %>
-              <%= f.button :submit, label: "Consult now", class: "btn btn-primary confirm-btn" %>
+              <div class="form-text">
+                <%= f.input :start_time, as: :datetime, html5: true %>
+                <%= f.input :number_of_children, as: :numeric %>
+              </div>
+              <div class="d-flex justify-content-center">
+                <%= f.button :submit, label: "Consult now", class: "btn btn-primary confirm-btn flex-grow" %>
+              </div>
               <% end %>
             </div>
           </div>
         </div>
       </div>
 
+      <div class="line-break-map"></div>
       <div class="map-column map-sticky" style="width: 100%; height: 600px;"
         data-controller="mapbox"
         data-mapbox-markers-value="<%= @markers.to_json %>"
