--- a/app/views/profiles/partials/tabs/_daycares-tab.html.erb
+++ b/app/views/profiles/partials/tabs/_daycares-tab.html.erb
@@ -4,7 +4,7 @@
     <div class='col col-sm-6'>
       <div class="card-profile mt-4 d-flex flex-column">
         <img src= "https://www.todaysparent.com/wp-content/uploads/2016/09/daycare-germs-what-you-need-to-know-1280x960-new.jpg" class="w-100"/>
-        <div class="card-profile-infos d-flex justify-contents-between">
+        <div class="card-profile-infos d-flex justify-content-between">
           <div class="d-flex flex-column align-items-between m-2">
             <h2><%= link_to daycare.name, daycare_path(daycare) %></h2>
               <div>
