--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -20,7 +20,7 @@
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
-  margin-right: 8px !important;
+  margin-left: 8px !important;
 }
 
 .avatar-bordered-admin {
