--- a/app/views/daycares/index.html.erb
+++ b/app/views/daycares/index.html.erb
@@ -90,50 +90,58 @@
                     <h2><%= link_to daycare.name, daycare_path(daycare) %></h2>
 
                       <%# Sorry about this: %>
-                      <div class="d-flex align-items-center">
-                        <% if daycare.rating >= 1 %>
-                          <span class="fa fa-star checked"></span>
-                        <% else %>
-                          <span class="fa fa-star"></span>
-                        <% end %>
-                        <% if daycare.rating >= 2 %>
-                          <span class="fa fa-star checked"></span>
-                        <% else %>
-                          <span class="fa fa-star"></span>
-                        <% end %>
-                        <% if daycare.rating >= 3 %>
-                          <span class="fa fa-star checked"></span>
-                        <% else %>
-                          <span class="fa fa-star"></span>
-                        <% end %>
-                        <% if daycare.rating >= 4 %>
-                          <span class="fa fa-star checked"></span>
-                        <% else %>
-                          <span class="fa fa-star"></span>
-                        <% end %>
-                        <% if daycare.rating >= 5 %>
-                          <span class="fa fa-star checked"></span>
-                        <% else %>
-                          <span class="fa fa-star"></span>
-                        <% end %>
-                        <p class="ml-3 mt-1">(<%= daycare.reviews.size %>)</p>
-                      </div>
+                      <% if daycare.rating > 0 %>
+                        <div class="d-flex align-items-center">
+                          <% if daycare.rating >= 1 %>
+                            <span class="fa fa-star checked"></span>
+                          <% else %>
+                            <span class="fa fa-star"></span>
+                          <% end %>
+                          <% if daycare.rating >= 2 %>
+                            <span class="fa fa-star checked"></span>
+                          <% else %>
+                            <span class="fa fa-star"></span>
+                          <% end %>
+                          <% if daycare.rating >= 3 %>
+                            <span class="fa fa-star checked"></span>
+                          <% else %>
+                            <span class="fa fa-star"></span>
+                          <% end %>
+                          <% if daycare.rating >= 4 %>
+                            <span class="fa fa-star checked"></span>
+                          <% else %>
+                            <span class="fa fa-star"></span>
+                          <% end %>
+                          <% if daycare.rating >= 5 %>
+                            <span class="fa fa-star checked"></span>
+                          <% else %>
+                            <span class="fa fa-star"></span>
+                          <% end %>
+                          <p class="ml-3 mt-1">(<%= daycare.reviews.size %>)</p>
+                        </div>
+                      <% else %>
+                        <p><em>No reviews yet</em></p>
+                      <% end %>
                   </div>
-                  <div class="btn-tag">
-                  <% daycare.tags.first(2).each do |tag|%>
-                    <p class="btn btn-outline-secondary"><%= link_to tag.name, root_path(:tag => tag.name) %></p>
-                  <% end %>
-                  </div>
+                    <div class="btn-tag">
+                    <% daycare.tags.first(3).each do |tag|%>
+                      <p class="btn btn-outline-secondary"><%= link_to tag.name, root_path(:tag => tag.name) %></p>
+                    <% end %>
+                    </div>
+
                   <p><em><%= daycare.description[0,100] %></em></p>
 
-                  <%# Replace Date.today with opening_date %>
-                  <% if daycare.opening_date %>
-                    <% if daycare.opening_date.strftime("%B") == Time.now.strftime("%B")  %>
-                      <p>Availabilities: <span class="green"><strong><%= daycare.opening_date.strftime("%B") %></strong></span></p>
-                    <% else %>
-                      <p>Availabilities: <span class="red"><strong><%= daycare.opening_date.strftime("%B") %></strong></span></p>
+
+                    <%# Replace Date.today with opening_date %>
+                  <div class="availabilities-text">
+                    <% if daycare.opening_date %>
+                      <% if daycare.opening_date >= Date.today  %>
+                        <p>Availabilities: <span class="green"><strong><%= daycare.opening_date.strftime("%B") %></strong></span></p>
+                      <% else %>
+                        <p>Availabilities: <span class="red"><strong><%= daycare.opening_date.strftime("%B") %></strong></span></p>
+                      <% end %>
                     <% end %>
-                  <% end %>
+                  </div>
                 </div>
               </div>
             </div>
@@ -141,7 +149,7 @@
         </div>
       </div>
       <div class='col col-sm-3'>
-        <div class="map-column map-sticky" style="width: 100%; height: 600px;"
+        <div class="map-column-home map-sticky" style="width: 100%; height: 600px;"
           data-controller="mapbox"
           data-mapbox-markers-value="<%= @markers.to_json %>"
           data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
