--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -39,6 +39,7 @@
       <% end %>
     <% end %>
     </p>
+    <% if user_signed_in? %>
     <div data-controller="favorite" data-favorite-id-value = <%= @daycare.id %>>
         <%= link_to toggle_favorite_daycare_path(@daycare), data: { favorite_target: "link", action: "favorite#toggleFavorite"} do %>
           <% if @daycare.favorited_by?(current_user) %>
@@ -49,6 +50,7 @@
         <% end %>
       </a>
     </div>
+    <% end %>
   </div>
 
   <%# Photo gallery %>
