signup & signin forms tweaked

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,3 +83,30 @@ h2 a {
 .footer-links:hover {
   color: #FF6053;
 }
+
+.form-inputs {
+  width: 300px;
+  align-items: center;
+  margin-left: 600px;
+  margin-top: 30px;
+}
+
+.sign-up {
+  margin-left: 700px;
+  padding-top: 30px;
+  font-size: large;
+}
+
+.form-actions {
+  margin-left: 700px;
+  height: 200px;
+}
+
+.signup-btn {
+  font-weight: bolder;
+}
+
+.sign-in {
+  margin-left: 700px;
+  padding-top: 30px;
+}
