--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 
 // External libraries
 @import "jquery-bar-rating/dist/themes/bars-1to10";
+@import "jquery-bar-rating/dist/themes/css-stars";
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
