fix error in edit profile

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -6,7 +6,7 @@
     <% else %>
       <%= f.input :first_name %>
       <%= f.input :last_name %>
-      <%= f.input :location %>
+      <%= f.input :address %>
     <% end %>
     <%= f.input :email %>
     <%= f.input :bio %>
