--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -6,3 +6,7 @@
   text-align: center;
   font-family: "Source Sans Pro", sans-serif;
 }
+
+.mapboxgl-ctrl-geocoder {
+  margin-right: 32px !important;
+}
