--- a/app/views/simple_calendar/_calendar.html.erb
+++ b/app/views/simple_calendar/_calendar.html.erb
@@ -7,7 +7,7 @@
 
   <table class="table table-striped">
     <thead>
-      <tr>
+      <tr style="border-color: red !important;">
         <% date_range.slice(0, 7).each do |day| %>
           <th><%= t('date.abbr_day_names')[day.wday] %></th>
         <% end %>
