--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -20,7 +20,7 @@
         <tr>
           <% dates.each do |date| %>
             <%= content_tag :td, class: calendar.td_classes_for(date) do %>
-                <% passed_block.call date, sorted_events.fetch(date, []) %>
+                <% passed_block.call date.strftime("%e"), sorted_events.fetch(date, []) %>
             <% end %>
           <% end %>
         </tr>
