--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -1,3 +1,9 @@
+<style>
+.mapboxgl-ctrl-top-right {
+  display: none !important;
+}
+</style>
+
 <div class="container">
   <div class="mt-4 mb-3 daycare-title">
     <h1 class="mt-4 mb-0"><%= @daycare.name %></h1>
