Changes button text

--- a/app/views/daycares/index.html.erb
+++ b/app/views/daycares/index.html.erb
@@ -72,7 +72,7 @@
               <%= f.select :opening, (1..5).to_a, selected: params[:opening] || 1, class: "form-control" %>
           </div>
             <div class="d-flex justify-content-center">
-              <%= f.submit "Search", class: "btn btn-danger search-btn" %>
+              <%= f.submit "Filter", class: "btn btn-danger search-btn" %>
             </div>
           <% end %>
         </div>
