--- a/app/assets/stylesheets/pages/_user-profile-owner.scss
+++ b/app/assets/stylesheets/pages/_user-profile-owner.scss
@@ -24,6 +24,13 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
+.client-consultation-text p {
+  font-size: 14px;
+}
+
+.favourite a {
+  font-size: 20px !important;
+}
 // .nav-tabs {
 //   border-top: 1px solid #dee2e6;
 // }
