--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -5,62 +5,72 @@
 </style>
 
 <div class="container">
-  <div class="mt-4 mb-3 daycare-title">
-    <h1 class="mt-4 mb-0"><%= @daycare.name %></h1>
+  <div class="d-flex justify-content-between mt-4 mb-3">
+    <div class="daycare-title">
+      <h1 class="mt-4 mb-0"><%= @daycare.name %></h1>
 
-    <%# Sorry about this: %>
-    <% if @daycare.reviews.size > 0 %>
-      <div class="d-flex align-items-center">
-        <% if @daycare.rating >= 1 %>
-          <span class="fa fa-star checked"></span>
-        <% else %>
-          <span class="fa fa-star"></span>
-        <% end %>
-        <% if @daycare.rating >= 2 %>
-          <span class="fa fa-star checked"></span>
-        <% else %>
-          <span class="fa fa-star"></span>
-        <% end %>
-        <% if @daycare.rating >= 3 %>
-          <span class="fa fa-star checked"></span>
-        <% else %>
-          <span class="fa fa-star"></span>
-        <% end %>
-        <% if @daycare.rating >= 4 %>
-          <span class="fa fa-star checked"></span>
-        <% else %>
-          <span class="fa fa-star"></span>
-        <% end %>
-        <% if @daycare.rating >= 5 %>
-          <span class="fa fa-star checked"></span>
-        <% else %>
-          <span class="fa fa-star"></span>
-        <% end %>
-        <p class="pl-3 mb-0">(<%= @daycare.reviews.size %>)</p>
-      </div>
-    <% else %>
-    <p class="mb-0"><em>No reviews yet</em></p>
-    <% end %>
-    <p class="mb-2"><em><%=@daycare.address %></em> <% if user_signed_in? %>
-    <% if @daycare.supplier.first_name == current_user.first_name %>
-        <%= link_to edit_daycare_path(@daycare), data: {confirm: 'Are you sure you want to edit this daycare?'} do %>
-          <i class="fa-solid fa-pencil blue"></i>
-        <% end %>
-      <% end %>
-    <% end %>
-    </p>
-    <% if user_signed_in? %>
-    <div data-controller="favorite" data-favorite-id-value = <%= @daycare.id %>>
-        <%= link_to toggle_favorite_daycare_path(@daycare), data: { favorite_target: "link", action: "favorite#toggleFavorite"} do %>
-          <% if @daycare.favorited_by?(current_user) %>
-            <i data-favorite-target = "icon" class="fa-solid fa-heart"></i>
+      <%# Sorry about this: %>
+      <% if @daycare.reviews.size > 0 %>
+        <div class="d-flex align-items-center">
+          <% if @daycare.rating >= 1 %>
+            <span class="fa fa-star checked"></span>
           <% else %>
-            <i data-favorite-target = "icon" class="fa-regular fa-heart"> Add as favorites</i>
+            <span class="fa fa-star"></span>
+          <% end %>
+          <% if @daycare.rating >= 2 %>
+            <span class="fa fa-star checked"></span>
+          <% else %>
+            <span class="fa fa-star"></span>
+          <% end %>
+          <% if @daycare.rating >= 3 %>
+            <span class="fa fa-star checked"></span>
+          <% else %>
+            <span class="fa fa-star"></span>
+          <% end %>
+          <% if @daycare.rating >= 4 %>
+            <span class="fa fa-star checked"></span>
+          <% else %>
+            <span class="fa fa-star"></span>
+          <% end %>
+          <% if @daycare.rating >= 5 %>
+            <span class="fa fa-star checked"></span>
+          <% else %>
+            <span class="fa fa-star"></span>
+          <% end %>
+          <p class="pl-3 mb-0">(<%= @daycare.reviews.size %>)</p>
+        </div>
+      <% else %>
+        <p class="mb-0"><em>No reviews yet</em></p>
+      <% end %>
+      <p class="mb-2"><em><%=@daycare.address %></em> <% if user_signed_in? %>
+      <% if @daycare.supplier.first_name == current_user.first_name %>
+          <%= link_to edit_daycare_path(@daycare), data: {confirm: 'Are you sure you want to edit this daycare?'} do %>
+            <i class="fa-solid fa-pencil blue"></i>
           <% end %>
         <% end %>
-      </a>
+      <% end %>
+      </p>
     </div>
-    <% end %>
+    <div class="d-flex align-items-end favourite-show">
+      <% if user_signed_in? %>
+      <div data-controller="favorite" data-favorite-id-value = <%= @daycare.id %>>
+          <%= link_to toggle_favorite_daycare_path(@daycare), data: { favorite_target: "link", action: "favorite#toggleFavorite"} do %>
+            <% if @daycare.favorited_by?(current_user) %>
+            <div class="d-flex align-items-center add-to-favourites">
+              <p data-favorite-target = "text" class="d-none">Add to favorites</p>
+              <i data-favorite-target = "icon" data-action="click->favorite#toggleText" class="fa-solid fa-heart"></i>
+            </div>
+            <% else %>
+            <div class="d-flex align-items-center add-to-favourites">
+              <p data-favorite-target = "text" class="">Add to favorites</p>
+              <i data-favorite-target = "icon" data-action="click->favorite#toggleText" class="fa-regular fa-heart"></i>
+            </div>
+            <% end %>
+          <% end %>
+        </a>
+      </div>
+      <% end %>
+    </div>
   </div>
 
   <%# Photo gallery %>
