--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -113,3 +113,7 @@ margin-left: 260px;
 .availabilities-text p {
   font-size: 14px;
 }
+
+.availabilities-text-favourites p {
+  font-size: 16px;
+}
