--- a/app/views/daycares/index.html.erb
+++ b/app/views/daycares/index.html.erb
@@ -81,66 +81,81 @@
         <div class="d-flex flex-wrap">
           <% @daycares.each do |daycare| %>
             <div class='col col-sm-12 p-2'>
-              <div class="card-product">
+              <div class="card-product index-card d-flex justify-content-between">
+              <div class="d-flex justify-content-start">
                 <img src="https://static01.nyt.com/images/2020/10/16/multimedia/par-daycare-16/par-daycare-16-superJumbo.jpg" />
-                <div class="card-product-infos flex-column d-flex justify-content-between">
-                  <div class="">
-                    <h2><%= link_to daycare.name, daycare_path(daycare) %></h2>
+                <div class="d-flex justify-content-between">
+                  <div class="card-product-infos flex-column d-flex justify-content-between">
+                    <div class="">
+                      <h2><%= link_to daycare.name, daycare_path(daycare) %></h2>
 
-                      <%# Sorry about this: %>
-                      <% if daycare.rating > 0 %>
-                        <div class="d-flex align-items-center">
-                          <% if daycare.rating >= 1 %>
-                            <span class="fa fa-star checked"></span>
-                          <% else %>
-                            <span class="fa fa-star"></span>
-                          <% end %>
-                          <% if daycare.rating >= 2 %>
-                            <span class="fa fa-star checked"></span>
-                          <% else %>
-                            <span class="fa fa-star"></span>
-                          <% end %>
-                          <% if daycare.rating >= 3 %>
-                            <span class="fa fa-star checked"></span>
-                          <% else %>
-                            <span class="fa fa-star"></span>
-                          <% end %>
-                          <% if daycare.rating >= 4 %>
-                            <span class="fa fa-star checked"></span>
-                          <% else %>
-                            <span class="fa fa-star"></span>
-                          <% end %>
-                          <% if daycare.rating >= 5 %>
-                            <span class="fa fa-star checked"></span>
-                          <% else %>
-                            <span class="fa fa-star"></span>
-                          <% end %>
-                          <p class="ml-3 mt-1">(<%= daycare.reviews.size %>)</p>
-                        </div>
-                      <% else %>
-                        <p><em>No reviews yet</em></p>
-                      <% end %>
-                  </div>
-                    <div class="btn-tag">
-                    <% daycare.tags.first(3).each do |tag|%>
-                      <p class="btn btn-outline-secondary"><%= link_to tag.name, root_path(:tag => tag.name) %></p>
-                    <% end %>
+                        <%# Sorry about this: %>
+                        <% if daycare.rating > 0 %>
+                          <div class="d-flex align-items-center">
+                            <% if daycare.rating >= 1 %>
+                              <span class="fa fa-star checked"></span>
+                            <% else %>
+                              <span class="fa fa-star"></span>
+                            <% end %>
+                            <% if daycare.rating >= 2 %>
+                              <span class="fa fa-star checked"></span>
+                            <% else %>
+                              <span class="fa fa-star"></span>
+                            <% end %>
+                            <% if daycare.rating >= 3 %>
+                              <span class="fa fa-star checked"></span>
+                            <% else %>
+                              <span class="fa fa-star"></span>
+                            <% end %>
+                            <% if daycare.rating >= 4 %>
+                              <span class="fa fa-star checked"></span>
+                            <% else %>
+                              <span class="fa fa-star"></span>
+                            <% end %>
+                            <% if daycare.rating >= 5 %>
+                              <span class="fa fa-star checked"></span>
+                            <% else %>
+                              <span class="fa fa-star"></span>
+                            <% end %>
+                            <p class="ml-3 mt-1">(<%= daycare.reviews.size %>)</p>
+                          </div>
+                        <% else %>
+                          <p><em>No reviews yet</em></p>
+                        <% end %>
                     </div>
-
-                  <p><em><%= daycare.description[0,100] %></em></p>
-
-
-                    <%# Replace Date.today with opening_date %>
-                  <div class="availabilities-text">
-                    <% if daycare.opening_date %>
-                      <% if daycare.opening_date >= Date.today  %>
-                        <p>Availabilities: <span class="green"><strong><%= daycare.opening_date.strftime("%B") %></strong></span></p>
-                      <% else %>
-                        <p>Availabilities: <span class="red"><strong><%= daycare.opening_date.strftime("%B") %></strong></span></p>
+                      <div class="btn-tag">
+                      <% daycare.tags.first(3).each do |tag|%>
+                        <p class="btn btn-outline-secondary"><%= link_to tag.name, root_path(:tag => tag.name) %></p>
                       <% end %>
-                    <% end %>
+                      </div>
+
+                    <p><em><%= daycare.description[0,100] %></em></p>
+
+
+                      <%# Replace Date.today with opening_date %>
+                    <div class="availabilities-text">
+                      <% if daycare.opening_date %>
+                        <% if daycare.opening_date >= Date.today  %>
+                          <p>Availabilities: <span class="green"><strong><%= daycare.opening_date.strftime("%B") %></strong></span></p>
+                        <% else %>
+                          <p>Availabilities: <span class="red"><strong><%= daycare.opening_date.strftime("%B") %></strong></span></p>
+                        <% end %>
+                      <% end %>
+                    </div>
                   </div>
                 </div>
+              </div>
+                <% if current_user && current_user.category == "client"%>
+                  <div class="mt-1 favourite" data-controller="favorite" data-favorite-id-value = <%= daycare.id %>>
+                    <%= link_to toggle_favorite_daycare_path(daycare), data: { favorite_target: "link", action: "favorite#toggleFavorite"} do %>
+                      <% if daycare.favorited_by?(current_user) %>
+                        <i data-favorite-target = "icon" class="fa-solid fa-heart"></i>
+                      <% else %>
+                        <i data-favorite-target = "icon" class="fa-regular fa-heart"></i>
+                      <% end %>
+                    <% end %>
+                  </div>
+                <% end %>
               </div>
             </div>
           <% end %>
