--- a/app/views/profiles/partials/_client-show.html.erb
+++ b/app/views/profiles/partials/_client-show.html.erb
@@ -26,8 +26,8 @@
             <h2 class="pink">Your bio:</h2>
             <%= link_to "Edit profile", edit_my_profile_path(@user), class: "btn btn-primary confirm-btn" %>
           </div>
-          <p><em><%= current_user.bio %></em></p>
-          <p class="line-break pb-4"><em>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus delectus suscipit totam animi modi dolorem fugit? Sapiente, pariatur eum minus, fugiat magni unde</em></p>
+          <p class="line-break pb-4"><em><%= current_user.bio %></em></p>
+          <%# <p class="line-break pb-4"><em>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus delectus suscipit totam animi modi dolorem fugit? Sapiente, pariatur eum minus, fugiat magni unde</em></p> %>
         </div>
       </div>
     </div>
