--- a/app/views/profiles/partials/client-tabs/_confirmed-tab.html.erb
+++ b/app/views/profiles/partials/client-tabs/_confirmed-tab.html.erb
@@ -4,10 +4,10 @@
     <div class='col col-sm-6'>
       <div class="card-profile mt-4 d-flex flex-column">
         <img src= "https://www.todaysparent.com/wp-content/uploads/2016/09/daycare-germs-what-you-need-to-know-1280x960-new.jpg" class="w-100"/>
-        <div class="card-profile-infos d-flex justify-contents-between">
+        <div class="card-profile-infos d-flex justify-content-between">
           <div class="d-flex flex-column align-items-between m-2">
             <h2><%= link_to consultation.daycare.name, daycare_path(consultation.daycare) %></h2>
-              <div>
+              <div class="d-flex align-items-center">
                 <% if consultation.daycare.rating >= 1 %>
                   <span class="fa fa-star checked"></span>
                 <% else %>
@@ -33,16 +33,25 @@
                 <% else %>
                   <span class="fa fa-star"></span>
                 <% end %>
+                <p class="ml-3 mt-1">(<%= consultation.daycare.reviews.size %>)</p>
               </div>
-            <p class="mt-0"><%= consultation.start_time %></p>
-            <p>Status:<%= consultation.status %></p>
-              <%= simple_form_for consultation do |f| %>
-              <%= f.input :status, priority: ["Cancelled"], collection: ["Cancelled"]%>
-              <%= f.submit "Cancel", class:"btn btn-danger"%>
+              <div class="client-consultation-text">
+                <p class="mt-0"><%= consultation.start_time.strftime("%A, %B %d, %Y ") %> at <%= "#{consultation.start_time.strftime("%I")}:#{consultation.start_time.strftime("%M,%P")}"%></p>
+                <% if consultation.status == "confirmed" %>
+                  <p>Status: <span class="green"><strong><%= consultation.status.capitalize %></strong></span></p>
+                <% elsif consultation.status == "cancelled" || consultation.status == "declined" %>
+                  <p>Status: <span class="red"><strong><%= consultation.status.capitalize %></strong></span></p>
+                <% elsif consultation.status == "pending" %>
+                  <p>Status: <span class="blue"><strong><%= consultation.status.capitalize %></strong></span></p>
+                <% end %>
+              </div>
+          </div>
+
+            <%= simple_form_for consultation, html: {class: "pb-4"} do |f| %>
+              <%= f.input :status, :as => :hidden, :input_html => { :value => "Cancelled" } %>
+              <%= f.submit "Cancel", class:"btn btn-primary decline-btn"%>
             <% end %>
-          </div>
-          <div>
-          </div>
+
         </div>
       </div>
     </div>
