--- a/app/views/profiles/partials/client-tabs/_favorites-tab.html.erb
+++ b/app/views/profiles/partials/client-tabs/_favorites-tab.html.erb
@@ -1,52 +1,64 @@
 <%# <h2>Your daycares:</h2> %>
 <div class="row">
   <% current_user.all_favorited.each do |daycare| %>
-  <div class='col col-sm-6'>
+  <div data-controller="profile" data-profile-target="card" class='col col-sm-6'>
     <div class="card-profile mt-4 d-flex flex-column">
         <img src= "https://www.todaysparent.com/wp-content/uploads/2016/09/daycare-germs-what-you-need-to-know-1280x960-new.jpg" class="w-100"/>
       <div class="card-profile-infos d-flex justify-content-between">
-        <div class="d-flex flex-column align-items-between m-2">
-          <h2><%= link_to daycare.name, daycare_path(daycare) %></h2>
-          <div>
-            <% if daycare.rating >= 1 %>
-              <span class="fa fa-star checked"></span>
-            <% else %>
-              <span class="fa fa-star"></span>
-            <% end %>
-            <% if daycare.rating >= 2 %>
-              <span class="fa fa-star checked"></span>
-            <% else %>
-              <span class="fa fa-star"></span>
-            <% end %>
-            <% if daycare.rating >= 3 %>
-              <span class="fa fa-star checked"></span>
-            <% else %>
-              <span class="fa fa-star"></span>
-            <% end %>
-            <% if daycare.rating >= 4 %>
-              <span class="fa fa-star checked"></span>
-            <% else %>
-              <span class="fa fa-star"></span>
-            <% end %>
-            <% if daycare.rating >= 5 %>
-              <span class="fa fa-star checked"></span>
-            <% else %>
-              <span class="fa fa-star"></span>
-            <% end %>
+        <div class="d-flex justify-content-between">
+          <div class="d-flex flex-column align-items-between m-2">
+            <h2><%= link_to daycare.name, daycare_path(daycare) %></h2>
+            <div class="d-flex align-items-center">
+              <% if daycare.rating >= 1 %>
+                <span class="fa fa-star checked"></span>
+              <% else %>
+                <span class="fa fa-star"></span>
+              <% end %>
+              <% if daycare.rating >= 2 %>
+                <span class="fa fa-star checked"></span>
+              <% else %>
+                <span class="fa fa-star"></span>
+              <% end %>
+              <% if daycare.rating >= 3 %>
+                <span class="fa fa-star checked"></span>
+              <% else %>
+                <span class="fa fa-star"></span>
+              <% end %>
+              <% if daycare.rating >= 4 %>
+                <span class="fa fa-star checked"></span>
+              <% else %>
+                <span class="fa fa-star"></span>
+              <% end %>
+              <% if daycare.rating >= 5 %>
+                <span class="fa fa-star checked"></span>
+              <% else %>
+                <span class="fa fa-star"></span>
+              <% end %>
+              <p class="ml-3 mt-1">(<%= daycare.reviews.size %>)</p>
+            </div>
+            <div class="client-consultation-text">
+              <p class="pt-1"><%= daycare.address %></p>
+              <p class="pt-1"><em><%= daycare.description %></em></p>
+            </div>
+            <div class="availabilities-text-favourites mt-1">
+              <% if daycare.opening_date %>
+                <% if daycare.opening_date >= Date.today  %>
+                  <p>Availabilities: <span class="green"><strong><%= daycare.opening_date.strftime("%B") %></strong></span></p>
+                <% else %>
+                  <p>Availabilities: <span class="red"><strong><%= daycare.opening_date.strftime("%B") %></strong></span></p>
+                <% end %>
+              <% end %>
+            </div>
           </div>
-          <p><%= daycare.address %></p>
-          <p><em><%= daycare.description %></em></p>
-    <div data-controller="favorite" data-favorite-id-value = <%= daycare.id %>>
-      <%= link_to toggle_favorite_daycare_path(daycare), data: { favorite_target: "link", action: "favorite#toggleFavorite"} do %>
-        <% if daycare.favorited_by?(current_user) %>
-          <i data-favorite-target = "icon" class="fa-solid fa-heart"></i>
-        <% else %>
-          <i data-favorite-target = "icon" class="fa-regular fa-heart"> Add as favorites</i>
-        <% end %>
-     <% end %>
-    </div>
         </div>
-        <div class="d-flex justify-content-end">
+        <div class="mt-1 favourite" data-controller="favorite" data-favorite-id-value = <%= daycare.id %>>
+          <%= link_to toggle_favorite_daycare_path(daycare), data: { favorite_target: "link", action: "favorite#toggleFavorite"} do %>
+            <% if daycare.favorited_by?(current_user) %>
+              <i data-favorite-target = "icon" data-action="click->profile#hideCard" class="fa-solid fa-heart"></i>
+            <% else %>
+              <i data-favorite-target = "icon" data-action="click->profile#hideCard" class="fa-regular fa-heart"></i>
+            <% end %>
+          <% end %>
         </div>
       </div>
     </div>
