--- a/app/views/daycares/index.html.erb
+++ b/app/views/daycares/index.html.erb
@@ -6,16 +6,29 @@
     </div>
   </div> %>
   <div class="scroll" data-controller="home">
-    <div class="banner d-flex justify-content-between">
-    <section id="stop-motion-animation"><div></div></section>
-      <div class="container d-flex flex-column title-text">
-        <h1>toddlr</h1>
-        <p>find the best daycare for your kids</p>
-        <div class="call-to-action" data-action="click->home#scroll">
-          <p class="btn btn-primary confirm-btn">find your daycare</p>
+    <div class="justify-content-center">
+      <div class="banner">
+        <div class="row">
+          <div class="d-flex justify-content-between">
+            <div class="col-6">
+                <div class="stop-container">
+                  <section id="stop-motion-animation"><div></div></section>
+                </div>
+            </div>
+            <div class="col-6">
+              <div class="container d-flex flex-column title-text align-items-end">
+                <h1>toddlr</h1>
+                <p>find the best daycare for your kids</p>
+                <div class="call-to-action" data-action="click->home#scroll">
+                  <p class="btn btn-primary confirm-btn">find your daycare</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+  </div>
 <% end %>
 
   <div class= 'container' id="tag-scroll">
