--- a/app/views/profiles/partials/_client-show.html.erb
+++ b/app/views/profiles/partials/_client-show.html.erb
@@ -33,10 +33,10 @@
     </div>
 
   <ul class="nav nav-tabs">
-    <li class="nav">
+    <li class="nav-item">
       <a class="nav-link active" data-bs-toggle="tab" data-bs-target="#favorites" aria-current="page" id="test-favorites" href="#">Favorite Daycares</a>
     </li>
-    <li class="nav">
+    <li>
       <a class="nav-link" data-bs-toggle="tab" data-bs-target="#test" aria-current="page" id="test-tab" href="#">All Consultations</a>
     </li>
     <li>
