--- a/app/assets/stylesheets/components/_stop-motion.scss
+++ b/app/assets/stylesheets/components/_stop-motion.scss
@@ -1,65 +1,152 @@
+.stop-container {
+  // width: 750px;
+  height: 750px;
+  padding-left: 120px;
+  // top: -200;
+  // margin: auto;
+  // margin-left: auto;
+}
+
+
 *#stop-motion-animation > div{
-  width:808px;
-  height:760px;
-  background-image:url('stop_motion_kite.png');
+  // top: -50;
+  width:788px;
+  height:780px;
+  background-image:url('stop-motion-3.png');
+  background-position: (0px, 0px);  // margin-bottom: 250px
+  // padding-left: 100px;
   background-repeat:no-repeat;
   -webkit-animation-name:ani;
-  -webkit-animation-duration:1.3s;
+  -webkit-animation-duration:2.1s;
   -webkit-animation-timing-function:steps(1);
   -webkit-animation-iteration-count:infinite;
   -webkit-animation-play-state:paused;
   animation-name:ani;
-  animation-duration:1.3s;
+  animation-duration:2.1s;
   animation-timing-function:steps(1);
   animation-iteration-count:infinite;
   animation-play-state:paused;
   -webkit-animation-play-state:running;
   animation-play-state:running;
+  z-index: -5;
  }
 
  @-webkit-keyframes ani{
-  12.5%{
-   background-position:-720px 0;
+  11.11%{
+   background-position:-780px 0;
   }
-  25%{
-   background-position:-1460px 0;
+  22.22%{
+   background-position:-1576px 0;
   }
-  37.5%{
-   background-position:-2247px 0;
+  33.33%{
+   background-position:-2364px 0;
   }
-  50%{
-   background-position:-3045px 0;
+  44.44%{
+   background-position:-3152px 0;
   }
-  62.5%{
-   background-position:-3903px 0;
+  55.55%{
+   background-position:-3940px 0;
   }
-  75%{
-    background-position:-4752px 0;
+  66.66%{
+    background-position:-4728px 0;
   }
-  87.5%{
-    background-position:-5680px 0;
+  77.77%{
+    background-position:-5516px 0;
   }
+  88.88%{
+    background-position:-6304px 0;
+  }
+  // 99.99%{
+  //   background-position:-7092px 0;
+  // }
  }
  @keyframes ani{
-  12.5%{
-    background-position:-720px 0;
+  11.11%{
+    background-position:-780px 0;
    }
-   25%{
-    background-position:-1460px 0;
+   22.22%{
+    background-position:-1576px 0;
    }
-   37.5%{
-    background-position:-2247px 0;
+   33.33%{
+    background-position:-2364px 0;
    }
-   50%{
-    background-position:-3045px 0;
+   44.44%{
+    background-position:-3152px 0;
    }
-   62.5%{
-    background-position:-3903px 0;
+   55.55%{
+    background-position:-3940px 0;
    }
-   75%{
-     background-position:-4752px 0;
+   66.66%{
+     background-position:-4728px 0;
    }
-   87.5%{
-     background-position:-5680px 0;
+   77.77%{
+     background-position:-5516px 0;
    }
- }
+   88.88%{
+     background-position:-6304px 0;
+   }
+   // 99.99%{
+   //   background-position:-7092px 0;
+   // }
+  }
+
+
+
+//  @-webkit-keyframes ani{
+//   11.11%{
+//    background-position:-766px 0;
+//   }
+//   22.22%{
+//    background-position:-1532px 0;
+//   }
+//   33.33%{
+//    background-position:-2298px 0;
+//   }
+//   44.44%{
+//    background-position:-3064px 0;
+//   }
+//   55.55%{
+//    background-position:-3830px 0;
+//   }
+//   66.66%{
+//     background-position:-4596px 0;
+//   }
+//   77.77%{
+//     background-position:-55362px 0;
+//   }
+//   88.89%{
+//     background-position:-6128px 0;
+//   }
+//   // 99.99%{
+//   //   background-position:-7092px 0;
+//   // }
+//  }
+//  @keyframes ani{
+//   11.11%{
+//     background-position:-766px 0;
+//    }
+//    22.22%{
+//     background-position:-1532px 0;
+//    }
+//    33.33%{
+//     background-position:-2298px 0;
+//    }
+//    44.44%{
+//     background-position:-3064px 0;
+//    }
+//    55.55%{
+//     background-position:-3830px 0;
+//    }
+//    66.66%{
+//      background-position:-4596px 0;
+//    }
+//    77.77%{
+//      background-position:-55362px 0;
+//    }
+//    88.89%{
+//      background-position:-6128px 0;
+//    }
+//    // 99.99%{
+//    //   background-position:-7092px 0;
+//    // }
+//   }
