--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -52,23 +52,23 @@
       </p>
     </div>
     <div class="d-flex align-items-end favourite-show">
-      <% if user_signed_in? %>
-      <div data-controller="favorite" data-favorite-id-value = <%= @daycare.id %>>
-          <%= link_to toggle_favorite_daycare_path(@daycare), data: { favorite_target: "link", action: "favorite#toggleFavorite"} do %>
-            <% if @daycare.favorited_by?(current_user) %>
-            <div class="d-flex align-items-center add-to-favourites">
-              <p data-favorite-target = "text" data-action="click->favorite#toggleText" class="d-none">Add to favorites</p>
-              <i data-favorite-target = "icon" data-action="click->favorite#toggleText" class="fa-solid fa-heart"></i>
-            </div>
-            <% else %>
-            <div class="d-flex align-items-center add-to-favourites">
-              <p data-favorite-target = "text" data-action="click->favorite#toggleText" class="">Add to favorites</p>
-              <i data-favorite-target = "icon" data-action="click->favorite#toggleText" class="fa-regular fa-heart"></i>
-            </div>
+      <% if user_signed_in? && current_user.category == "client"%>
+        <div data-controller="favorite" data-favorite-id-value = <%= @daycare.id %>>
+            <%= link_to toggle_favorite_daycare_path(@daycare), data: { favorite_target: "link", action: "favorite#toggleFavorite"} do %>
+              <% if @daycare.favorited_by?(current_user) %>
+              <div class="d-flex align-items-center add-to-favourites">
+                <p data-favorite-target = "text" data-action="click->favorite#toggleText" class="d-none">Add to favorites</p>
+                <i data-favorite-target = "icon" data-action="click->favorite#toggleText" class="fa-solid fa-heart"></i>
+              </div>
+              <% else %>
+              <div class="d-flex align-items-center add-to-favourites">
+                <p data-favorite-target = "text" data-action="click->favorite#toggleText" class="">Add to favorites</p>
+                <i data-favorite-target = "icon" data-action="click->favorite#toggleText" class="fa-regular fa-heart"></i>
+              </div>
+              <% end %>
             <% end %>
-          <% end %>
-        </a>
-      </div>
+          </a>
+        </div>
       <% end %>
     </div>
   </div>
