--- a/app/views/profiles/partials/_supplier-show.html.erb
+++ b/app/views/profiles/partials/_supplier-show.html.erb
@@ -24,7 +24,9 @@
       <div class="card-trip mt-4">
         <div class="d-flex justify-content-between align-items-start pink">
           <h2>Your bio:</h2>
-          <%= link_to "Edit profile", edit_my_profile_path(@user), class: "btn btn-primary confirm-btn" %>
+          <%= link_to edit_my_profile_path(@user), data: {confirm: 'Are you sure you want to edit this daycare?'} do %>
+            <i class="fa-solid fa-pencil blue"></i>
+          <% end %>
         </div>
         <p class="line-break pb-4"><em><%= current_user.bio %></em></p>
       </div>
