--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -304,7 +304,7 @@
               <%= simple_form_for [@daycare, @consultation] do |f| %>
               <div class="form-text">
                 <%= f.input :start_time, label: 'Date and Time', as: :datetime, html5: true %>
-                <%= f.input :number_of_children, as: :numeric %>
+                <%= f.input :number_of_children, as: :numeric, input_html: {value: f.object.number_of_children || '1'} %>
               </div>
               <div class="d-flex justify-content-center">
                 <%= f.button :submit, label: "Consult now", class: "btn btn-primary confirm-btn flex-grow" %>
