If no reviews, fixed the looks of no reviews yet in daycare profile

--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -276,7 +276,8 @@
           <% end %>
         <% else %>
           <div class="pink">
-            <h2 class="mt-3 mb-4 pb-2">No reviews yet :(</h2>
+            <h2 class="mt-3 mb-4 pb-2">Reviews:</h2>
+            <p style="color:gray"><em>No reviews yet</em></p>
           </div>
         <% end %>
       </div>
