--- a/app/views/daycares/index.html.erb
+++ b/app/views/daycares/index.html.erb
@@ -1,4 +1,4 @@
-<% if @tag_scroll %>
+<% unless @tag_scroll == false || @clear_scroll == false%>
   <%# <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://media.edutopia.org/styles/responsive_2880px_16x9/s3/sites/default/files/masters/2021-10/istockphoto-1031753828-crop.jpg);">
     <div class="container">
       <h1>Toddlr</h1>
@@ -75,26 +75,39 @@
           <div class="filter-bar">
               <%= f.label "select max price", class: "filter-font"%>
               <%= f.select :price, (0..15).to_a, selected: params[:price] || 15, class: "form-control" %>
-              <%# <%= label_tag "select opening date" %>
-              <%# <%= text_field_tag :opening, %>
-                <%# params[:opening], %>
-                <%# class: "form-control", %>
-                <%# placeholder: "Find an opening date" %>
-                <%# %>
               <%= f.label "Available spots", class: "filter-font" %>
               <%= f.select :opening, (1..5).to_a, selected: params[:opening] || 1, class: "form-control" %>
           </div>
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center ml-2">
               <%= f.submit "Search", class: "btn btn-danger search-btn" %>
+              <% if @clear_filter == false %>
+                <div class="btn-tag btn btn-outline-secondary d-inline-flex align-items-center clear-filter-tag pt-1 pb-1">
+                  <%= link_to root_path(:clear_filter => "clear") do %>
+                  <p class="m-0 pr-1">Clear</p>
+                  <%# <i class="fa-solid fa-circle-xmark "></i> %>
+                  <% end %>
+                </div>
+              <% end %>
             </div>
           <% end %>
         </div>
       </div>
       <div class='col col-7'>
+      <% if @clear_tag == false %>
+        <div class="">
+          <div class="btn-tag btn btn-outline-secondary d-inline-flex align-items-center clear-tag pt-1 pb-1">
+            <p class="m-0 pr-1"><%= @daycares.first.tags.first.name %></p>
+            <%= link_to root_path(:clear => "clear") do %>
+              <i class="fa-solid fa-circle-xmark ">
+              </i>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
         <div class="d-flex flex-wrap">
           <% @daycares.each do |daycare| %>
             <div class='col col-sm-12 p-2'>
-              <div class="card-product index-card d-flex justify-content-between">
+              <div class="card-product index-card d-flex justi align-items-centerfy-content-between">
               <div class="d-flex justify-content-start">
                 <img src="https://static01.nyt.com/images/2020/10/16/multimedia/par-daycare-16/par-daycare-16-superJumbo.jpg" />
                 <div class="d-flex justify-content-between">
