changed empty star style

--- a/app/assets/stylesheets/components/_profile_cards.scss
+++ b/app/assets/stylesheets/components/_profile_cards.scss
@@ -25,6 +25,10 @@
   color: orange;
 }
 
+.card-profile .fa-star {
+  color: orange;
+}
+
 .card-profile p {
   font-size: 12px;
   line-height: 1.4;
