--- a/app/views/daycares/index.html.erb
+++ b/app/views/daycares/index.html.erb
@@ -121,27 +121,27 @@
                             <% if daycare.rating >= 1 %>
                               <span class="fa fa-star checked"></span>
                             <% else %>
-                              <span class="fa fa-star"></span>
+                              <span class="fa-regular fa-star"></span>
                             <% end %>
                             <% if daycare.rating >= 2 %>
                               <span class="fa fa-star checked"></span>
                             <% else %>
-                              <span class="fa fa-star"></span>
+                              <span class="fa-regular fa-star"></span>
                             <% end %>
                             <% if daycare.rating >= 3 %>
                               <span class="fa fa-star checked"></span>
                             <% else %>
-                              <span class="fa fa-star"></span>
+                              <span class="fa-regular fa-star"></span>
                             <% end %>
                             <% if daycare.rating >= 4 %>
                               <span class="fa fa-star checked"></span>
                             <% else %>
-                              <span class="fa fa-star"></span>
+                              <span class="fa-regular fa-star"></span>
                             <% end %>
                             <% if daycare.rating >= 5 %>
                               <span class="fa fa-star checked"></span>
                             <% else %>
-                              <span class="fa fa-star"></span>
+                              <span class="fa-regular fa-star"></span>
                             <% end %>
                             <p class="ml-3 mt-1">(<%= daycare.reviews.size %>)</p>
                           </div>
