--- a/app/views/profiles/partials/client-tabs/_all-tab.html.erb
+++ b/app/views/profiles/partials/client-tabs/_all-tab.html.erb
@@ -11,27 +11,27 @@
               <% if consultation.daycare.rating >= 1 %>
                 <span class="fa fa-star checked"></span>
               <% else %>
-                <span class="fa fa-star"></span>
+                <span class="fa-regular fa-star"></span>
               <% end %>
               <% if consultation.daycare.rating >= 2 %>
                 <span class="fa fa-star checked"></span>
               <% else %>
-                <span class="fa fa-star"></span>
+                <span class="fa-regular fa-star"></span>
               <% end %>
               <% if consultation.daycare.rating >= 3 %>
                 <span class="fa fa-star checked"></span>
               <% else %>
-                <span class="fa fa-star"></span>
+                <span class="fa-regular fa-star"></span>
               <% end %>
               <% if consultation.daycare.rating >= 4 %>
                 <span class="fa fa-star checked"></span>
               <% else %>
-                <span class="fa fa-star"></span>
+                <span class="fa-regular fa-star"></span>
               <% end %>
               <% if consultation.daycare.rating >= 5 %>
                 <span class="fa fa-star checked"></span>
               <% else %>
-                <span class="fa fa-star"></span>
+                <span class="fa-regular fa-star"></span>
               <% end %>
               <p class="ml-3 mt-1">(<%= consultation.daycare.reviews.size %>)</p>
             </div>
