--- a/app/assets/stylesheets/components/_index_cards.scss
+++ b/app/assets/stylesheets/components/_index_cards.scss
@@ -27,6 +27,10 @@
   color: orange;
 }
 
+.card-product .fa-star {
+  color: orange;
+}
+
 .card-product p {
   font-size: 12px;
   line-height: 1.4;
