--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -15,27 +15,27 @@
           <% if @daycare.rating >= 1 %>
             <span class="fa fa-star checked"></span>
           <% else %>
-            <span class="fa fa-star"></span>
+            <span class="fa-regular fa-star"></span>
           <% end %>
           <% if @daycare.rating >= 2 %>
             <span class="fa fa-star checked"></span>
           <% else %>
-            <span class="fa fa-star"></span>
+            <span class="fa-regular fa-star"></span>
           <% end %>
           <% if @daycare.rating >= 3 %>
             <span class="fa fa-star checked"></span>
           <% else %>
-            <span class="fa fa-star"></span>
+            <span class="fa-regular fa-star"></span>
           <% end %>
           <% if @daycare.rating >= 4 %>
             <span class="fa fa-star checked"></span>
           <% else %>
-            <span class="fa fa-star"></span>
+            <span class="fa-regular fa-star"></span>
           <% end %>
           <% if @daycare.rating >= 5 %>
             <span class="fa fa-star checked"></span>
           <% else %>
-            <span class="fa fa-star"></span>
+            <span class="fa-regular fa-star"></span>
           <% end %>
           <p class="pl-3 mb-0">(<%= @daycare.reviews.size %>)</p>
         </div>
@@ -245,27 +245,27 @@
                 <% if review.stars >= 1 %>
                   <span class="fa fa-star checked"></span>
                 <% else %>
-                  <span class="fa fa-star"></span>
+                  <span class="fa-regular fa-starr"></span>
                 <% end %>
                 <% if review.stars >= 2 %>
                   <span class="fa fa-star checked"></span>
                 <% else %>
-                  <span class="fa fa-star"></span>
+                  <span class="fa-regular fa-star"></span>
                 <% end %>
                 <% if review.stars >= 3 %>
                   <span class="fa fa-star checked"></span>
                 <% else %>
-                  <span class="fa fa-star"></span>
+                  <span class="fa-regular fa-star"></span>
                 <% end %>
                 <% if review.stars >= 4 %>
                   <span class="fa fa-star checked"></span>
                 <% else %>
-                  <span class="fa fa-star"></span>
+                  <span class="fa-regular fa-star"></span>
                 <% end %>
                 <% if review.stars >= 5 %>
                   <span class="fa fa-star checked"></span>
                 <% else %>
-                  <span class="fa fa-star"></span>
+                  <span class="fa-regular fa-star"></span>
                 <% end %>
               </div>
               <p class="mt-1"><%= review.content %> </p>
