--- a/app/views/profiles/partials/client-tabs/_public-reviews-tab.html.erb
+++ b/app/views/profiles/partials/client-tabs/_public-reviews-tab.html.erb
@@ -24,27 +24,27 @@
         <% if review.stars >= 1 %>
           <span class="fa fa-star checked"></span>
         <% else %>
-          <span class="fa fa-star"></span>
+          <span class="fa-regular fa-star"></span>
         <% end %>
         <% if review.stars >= 2 %>
           <span class="fa fa-star checked"></span>
         <% else %>
-          <span class="fa fa-star"></span>
+          <span class="fa-regular fa-star"></span>
         <% end %>
         <% if review.stars >= 3 %>
           <span class="fa fa-star checked"></span>
         <% else %>
-          <span class="fa fa-star"></span>
+          <span class="fa-regular fa-star"></span>
         <% end %>
         <% if review.stars >= 4 %>
           <span class="fa fa-star checked"></span>
         <% else %>
-          <span class="fa fa-star"></span>
+          <span class="fa-regular fa-star"></span>
         <% end %>
         <% if review.stars >= 5 %>
           <span class="fa fa-star checked"></span>
         <% else %>
-          <span class="fa fa-star"></span>
+          <span class="fa-regular fa-star"></span>
         <% end %>
       </div>
       <p><%= review.content %> </p>
